--- a/src/styles/Game.css
+++ b/src/styles/Game.css
@@ -1,10 +1,8 @@
-/* Style de base pour le minuteur */
 .timer {
   font-size: 2rem;
   transition: color 1s ease;
 }
 
-/* Transition de couleur pour les différentes étapes */
 .timer.less-than-30 {
   color: orange;
 }
@@ -13,21 +11,23 @@
   color: red;
 }
 
-/* Ajout d'une animation d'impact */
 @keyframes impact {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.1); }
-  100% { transform: scale(1); }
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .timer.impact {
-  color: red; /* Assurez-vous qu'il soit rouge lorsqu'il est dans la période critique */
-  animation: impact 1s infinite; /* Animation d'impact à chaque seconde */
+  color: red;
+  animation: impact 1s infinite;
 }
 
-
-
-/* Style pour le bouton Quitter */
 .quit-button {
   align-self: flex-start;
   margin: 20px;
@@ -45,19 +45,16 @@
   background-color: #ff1a1a;
 }
 
-/* Style pour le thème */
 .theme {
   font-size: 2rem;
   margin-bottom: 20px;
 }
 
-/* Style pour le joueur actuel */
 .current-player {
   font-size: 1.5rem;
   margin-bottom: 20px;
 }
 
-/* Style pour la confiance */
 .confidence-container {
   display: flex;
   flex-direction: column;
@@ -74,12 +71,10 @@
   margin: 10px 0;
 }
 
-/* Style pour les boutons de confiance */
 .confidence-buttons {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .confidence-button {
@@ -93,14 +88,12 @@
 .confidence-button:hover {
   color: #800080;
   background-color: transparent;
-
 }
 
 .confidence-button:focus {
   outline: none;
 }
 
-/* Style pour le bouton Valider */
 .validate-button {
   background-color: #800080;
   border: none;
@@ -116,7 +109,6 @@
   background-color: #4b0082;
 }
 
-/* Style pour le tableau de score */
 .scoreboard {
   position: absolute;
   top: 20px;
