--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -6,10 +6,42 @@
 }
 
 .home-page {
-    background-color: #e0dfd6;
-    height: 100vh;
+  background-image: linear-gradient(30deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
+    linear-gradient(150deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
+    linear-gradient(30deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
+    linear-gradient(150deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
+    linear-gradient(
+      60deg,
+      rgba(249, 185, 53, 0.5) 25%,
+      transparent 25.5%,
+      transparent 75%,
+      rgba(249, 185, 53, 0.5) 75%,
+      rgba(249, 185, 53, 0.5)
+    ),
+    linear-gradient(
+      60deg,
+      rgba(249, 185, 53, 0.5) 25%,
+      transparent 25.5%,
+      transparent 75%,
+      rgba(249, 185, 53, 0.5) 75%,
+      rgba(249, 185, 53, 0.5)
+    );
+  background-size: 50px 87.5px;
+  background-position: 0 0, 0 0, 25px 43.75px, 25px 43.75px, 0 0, 25px 43.75px;
+  background-color: #faac14;
+  height: 100vh;
 }
 
 .logo {
-    max-width: 400px;
-  }
+  max-width: 300px;
+  margin-top: 15%;
+}
+
+.title {
+  font-family: Luckiest Guy;
+  color: white;
+  font-size: 5rem;
+  text-shadow: 0px 4px 5px #444444;
+  -webkit-text-shadow: 0px 4px 5px #444444;
+  -moz-text-shadow: 0px 4px 5px #444444;
+}
