--- a/src/styles/Setup.css
+++ b/src/styles/Setup.css
@@ -1,42 +1,44 @@
-body {
-  background-image: linear-gradient(30deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
-    linear-gradient(150deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
-    linear-gradient(30deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
-    linear-gradient(150deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
-    linear-gradient(
-      60deg,
-      rgba(249, 185, 53, 0.5) 25%,
-      transparent 25.5%,
-      transparent 75%,
-      rgba(249, 185, 53, 0.5) 75%,
-      rgba(249, 185, 53, 0.5)
-    ),
-    linear-gradient(
-      60deg,
-      rgba(249, 185, 53, 0.5) 25%,
-      transparent 25.5%,
-      transparent 75%,
-      rgba(249, 185, 53, 0.5) 75%,
-      rgba(249, 185, 53, 0.5)
-    );
-  background-size: 50px 87.5px;
-  background-position: 0 0, 0 0, 25px 43.75px, 25px 43.75px, 0 0, 25px 43.75px;
-  background-color: #faac14;
-}
+
 
 .title-setup {
   font-family: "Odibee Sans", sans-serif;
   font-size: 50px;
   text-align: center;
-  margin-top: 50px;
-  color: #3d3d3d;
+  color: white;
+  text-shadow: 0px 4px 5px #444444;
+  -webkit-text-shadow: 0px 4px 5px #444444;
+  -moz-text-shadow: 0px 4px 5px #444444;
 }
 
-.container {
+.setup-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: linear-gradient(30deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
+  linear-gradient(150deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
+  linear-gradient(30deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
+  linear-gradient(150deg, #f9b935 12%, transparent 12.5%, transparent 87%, #f9b935 87.5%, #f9b935),
+  linear-gradient(
+    60deg,
+    rgba(249, 185, 53, 0.5) 25%,
+    transparent 25.5%,
+    transparent 75%,
+    rgba(249, 185, 53, 0.5) 75%,
+    rgba(249, 185, 53, 0.5)
+  ),
+  linear-gradient(
+    60deg,
+    rgba(249, 185, 53, 0.5) 25%,
+    transparent 25.5%,
+    transparent 75%,
+    rgba(249, 185, 53, 0.5) 75%,
+    rgba(249, 185, 53, 0.5)
+  );
+background-size: 50px 87.5px;
+background-position: 0 0, 0 0, 25px 43.75px, 25px 43.75px, 0 0, 25px 43.75px;
+background-color: #faac14;
+min-height: 100vh;
 }
 
 .mb-3 {
